<resources>
    <string name="app_name">MyPictureOfTheDay</string>
    <string name="main_photo">Main Photo Of The Day</string>
    <string name="wiki_helper_text">Type Here to see it in wiki</string>
    <string name="search_wiki">Search Wiki</string>
    <string name="fab">Center Button FAB</string>
    <string name="favourite">Любимые</string>
    <string name="settings">Настройки</string>
    <string name="item_drawer_1">Идём сюда</string>
    <string name="item_drawer_2">Идём туда</string>
    <string name="search">Поиск</string>
    <string name="show_hd_photo">Show HD Photo</string>
    <string name="show_simple_photo">Show POD</string>
    <string name="set_one_theme">Set One Theme</string>
    <string name="set_second_theme">Set Second Theme</string>
    <string name="top_text_settings_fragment">Please select any Theme and press to confirm</string>
    <string name="set_image_as_background">Set Image as background</string>
    <string name="fragment_mars_rover">Fragment Mars Rover</string>
    <string name="fragment_epic">Fragment Nasa Gallery</string>
    <string name="nasa_gallery">Nasa Gallery</string>
    <string name="mars_rover_photo">Mars Rover Photo</string>
    <string name="epic">Epic</string>
    <string name="fragment_three">Fragment THREE</string>
    <string name="fragment_epic_image">Fragment Epic</string>
    <string name="fragment_epic_earth">Fragment Epic Earth</string>
    <string name="fab_in_epic_fragment">FAB in Epic Fragment</string>
    <string name="more">Подробнее</string>
    <string name="my_notes">My Notes</string>
    <string name="notes_fab">Notes FAB</string>
    <string name="save">Save</string>
    <string name="my_notes_text">Мои заметки</string>
    <string name="note_image">Note image</string>
    <string name="my_picture_of_the_day">My Picture Of The Day</string>
</resources>